Added DescribeJobsResult.Builder to make job poll and recovery results more consistent.